# GantryGraph

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
demo-app/: test_utils.py  utils.py
examples/: 01_qa_agent.py  02_custom_tools.py  03_streaming.py  04_mcp_agent.py  05_custom_perception.py  06_multi_perception.py  07_swarm_specialists.py
src/gantrygraph/: __init__.py  _stealth.py  _utils.py  config.py  presets.py  tool.py
src/gantrygraph/actions/: __init__.py  browser.py  filesystem.py  mouse_keyboard.py  search.py  shell.py
src/gantrygraph/cloud/: __init__.py  serve.py
src/gantrygraph/cloud/templates/: Dockerfile  docker-compose.yml
src/gantrygraph/core/: __init__.py  base_action.py  base_mcp.py  base_perception.py  events.py  state.py
src/gantrygraph/engine/: __init__.py  engine.py  graph.py  nodes.py
src/gantrygraph/lvm/: __init__.py  base.py  claude.py
src/gantrygraph/mcp/: __init__.py  client.py  registry.py
src/gantrygraph/memory/: __init__.py  base.py  chroma.py  in_memory.py
src/gantrygraph/perception/: __init__.py  desktop.py  multi.py  web.py
src/gantrygraph/security/: __init__.py  policies.py  secrets.py
src/gantrygraph/swarm/: __init__.py  supervisor.py  worker.py
src/gantrygraph/telemetry/: __init__.py  otel.py
src/gantrygraph/vision/: __init__.py  base.py  claude.py
tests/: conftest.py
tests/e2e/: test_agent_loop_mock.py  test_real_tools.py
tests/integration/: test_browser_stealth.py  test_engine_integration.py  test_mcp_integration.py
tests/integration/fixtures/: mock_mcp_server.py
tests/unit/: test_actions.py  test_cloud.py  test_core.py  test_custom_loop.py  test_engine.py  test_mcp.py  test_memory.py  test_multi_perception.py  test_perception.py  test_presets.py  test_security.py  test_swarm.py  test_telemetry.py  test_tool_decorator.py
website/: mkdocs.yml  requirements.txt  vercel.json
website/docs/: api-reference.md  index.md  quickstart.md
website/docs/concepts/: engine.md  perception.md  tools.md
website/docs/how-to/: browser-agent.md  cloud-deploy.md  cost-optimization.md  desktop-agent.md  hitl.md  mcp.md  persistence.md  swarm.md  telemetry.md
website/docs/overrides/: home.html
website/docs/stylesheets/: extra.css
